--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -31,23 +31,16 @@
 
     <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}'></input>
 
-    <!-- uProxy contacts offering access to user -->
+    <!-- uProxy contacts offering access to or requesting access from user -->
     <uproxy-roster-group
-        groupTitle='Friends offering you access'
-        onlineContacts='{{ onlineOfferingYouAccess }}'
-        offlineContacts='{{ offlineOfferingYouAccess }}'
-        searchQuery='{{ searchQuery }}'></uproxy-roster-group>
-
-    <!-- uProxy contacts requesting access from user -->
-    <uproxy-roster-group
-        groupTitle='Friends requesting access from you'
-        onlineContacts='{{ onlineRequestingAccessFromYou }}'
-        offlineContacts='{{ offlineRequestingAccessFromYou }}'
+        groupTitle='{{ui.mode==UI.Mode.GET ? "Users offering you access" : "Users requesting access from you"}}'
+        onlineContacts='{{ onlinePending }}'
+        offlineContacts='{{ offlinePending }}'
         searchQuery='{{ searchQuery }}'></uproxy-roster-group>
 
     <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
     <hr color="#eee"
-        hidden?='{{ ((onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
+        hidden?='{{ ((onlinePending.length == 0 && offlinePending.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
 
     <!-- trusted uProxy contacts -->
     <uproxy-roster-group
@@ -58,7 +51,7 @@
 
     <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
     <hr color="#eee"
-        hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0))  }}'></hr>
+        hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlinePending.length == 0 && offlinePending.length == 0)) }}'></hr>
 
     <!-- untrusted uProxy contacts -->
     <uproxy-roster-group
@@ -69,7 +62,7 @@
 
     <!-- Hide HR if there are no Non-uProxy contacts, or if there are only Non-uProxy contacts -->
     <hr color="#eee"
-        hidden?='{{ (onlineNonUproxyContacts.length == 0 && offlineNonUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) && (onlineOfferingYouAccess.length == 0 && offlineOfferingYouAccess.length == 0) && (onlineRequestingAccessFromYou.length == 0 && offlineRequestingAccessFromYou.length == 0)) }}'></hr>
+        hidden?='{{ (onlineNonUproxyContacts.length == 0 && offlineNonUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) && (onlinePending.length == 0 && offlinePending.length == 0)) }}'></hr>
 
     <!-- non uProxy contacts -->
     <uproxy-roster-group
