--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -37,21 +37,24 @@
     .offline {
       opacity: 0.5;
     }
-    #userId {
-      color: #888;
-      margin-top: 0.5em;
-    }
     #words {
       display: inline-block;
       width: 290px;
       padding-left: 8px;
     }
-    h1 {
+    .nameRow {
       display: block;
       font-size: 16px;
       font-weight: 100;
       margin: 0;
       padding-top: 16px;
+    }
+    .name {
+      display: inline-block;
+      width: 255px;
+    }
+    .accessIcon {
+      vertical-align: middle;
     }
     .hasInstances #words:hover h1 {
       color: #aaa;
@@ -72,8 +75,13 @@
      <!-- on-blur='{{ collapse }}'> -->
       <img id='avatar' src='{{ contact.imageData }}' on-mousedown='{{ toggle }}'/>
       <div id='words'>
-        <h1 on-mousedown='{{ toggle }}'>{{ contact.name }}</h1>
-        <div id='userId' hidden?='{{!contact.expanded}}'>{{ contact.userId }}</div>
+        <div class='nameRow' on-mousedown='{{ toggle }}'>
+          <div class='name'>{{ contact.name }}</div>
+          <img src='../icons/getting.png' class='accessIcon'
+              hidden?='{{ ui.mode!=UI.Mode.GET || !contact.isSharingWithMe }}'>
+          <img src='../icons/sharing.png' class='accessIcon'
+              hidden?='{{ ui.mode!=UI.Mode.SHARE || !contact.isGettingFromMe }}'>
+        </div>
         <div id='instances' hidden?='{{!contact.expanded}}'>
           <template repeat='{{ i in contact.instances }}' vertical layout>
             <uproxy-instance
