--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>uProxy polymer UI</title>
+  <meta charset="UTF-8">
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='../lib/webcomponentsjs/webcomponents.js'></script>
 
