--- a/src/chrome/extension/app-missing.html
+++ b/src/chrome/extension/app-missing.html
@@ -7,7 +7,7 @@
 
   <script src='scripts/dependencies.js'></script>
 
-  <link rel='import' href='app-missing-polymer.html'>
+  <link rel='import' href='vulcanized-chrome.html'>
   <style>
   @font-face {
     font-family: eurostyle;
