--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>uProxy polymer UI</title>
+  <title>uProxy</title>
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='lib/webcomponentsjs/webcomponents.js'></script>
 
