Switch font to Roboto

--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -14,11 +14,11 @@
         padding: 30px;
         background-color: #FFFFFF;
         text-align: center;
-        font-family: 'Lucida Grande', sans-serif;
+        font-family: Roboto, sans-serif;
         font-size: 12px;
       }
       .detail {
-        font-family: 'Lucida Grande', sans-serif;
+        font-family: Roboto, sans-serif;
         color: #dd1144;
         font-size: 10px;
       }
