--- a/src/chrome/extension/app-missing.html
+++ b/src/chrome/extension/app-missing.html
@@ -10,14 +10,14 @@
   <link rel='import' href='vulcanized-chrome.html'>
   <style>
   @font-face {
-    font-family: eurostyle;
+    font-family: Roboto, sans-serif;
     src: url('../styles/eurostile.ttf');
   }
   body {
     width: 371px; height: 600px;
     display: block;
     text-align: center;
-    font-family: eurostyle, sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 13px;
     background-color: white;
     padding-top: 200px;
