--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -10,21 +10,23 @@
   <script src='scripts/dependencies.js'></script>
 
   <link rel='import' href='polymer/vulcanized.html'>
+  <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
+
   <style>
-  @font-face {
-    font-family: eurostyle;
-    src: url('styles/eurostile.ttf');
-  }
-  body {
-    position: relative;
-    width: 371px; height: 600px;
-    display: block;
-    text-align: center;
-    margin: 0;
-    font-family: eurostyle, sans-serif;
-    font-size: 13px;
-    background-color: #eee;
-  }
+    @font-face {
+      font-family: Roboto, sans-serif;
+      src: url('styles/eurostile.ttf');
+    }
+    body {
+      position: relative;
+      width: 371px; height: 600px;
+      display: block;
+      text-align: center;
+      margin: 0;
+      font-family: Roboto, sans-serif;
+      font-size: 13px;
+      background-color: #eee;
+    }
   </style>
 </head>
 
