--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -13,7 +13,7 @@
   <link rel='import' href='root.html'>
   <style>
   @font-face {
-    font-family: eurostyle;
+    font-family: Roboto, sans-serif;
     src: url('../styles/eurostile.ttf');
   }
   body {
@@ -22,7 +22,7 @@
     display: block;
     text-align: center;
     margin: 0;
-    font-family: eurostyle, sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 13px;
     background-color: #eee;
   }
