--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -49,7 +49,7 @@
         color: white;
         position: absolute;
         left: 55px;
-        margin-top: 0.7em;
+        margin-top: 0.5em;
       }
       #btnSettings:hover {
         opacity: 1.0;
@@ -79,9 +79,9 @@
       }
       .getShareTab {
         position: absolute;
-        top: 70px;
-        width: 30%;
-        margin-left: 10%;
+        top: 65px;
+        width: 32%;
+        margin-left: 9%;  /* (50% - width) / 2 */
         text-align: center;
         color: white;
         font-size: 1.2em;
@@ -137,7 +137,7 @@
         position: absolute;
         left: 0px;
         bottom: 0px;
-        height: 220px;
+        height: 255px;
         width: 100%;
       }
       #welcomeOverlay h1 {
@@ -146,6 +146,7 @@
       #welcomeOverlay ul {
         line-height: 1.5em;
         margin-bottom: 0;
+        padding-left: 1.5em;
       }
       #welcomeOverlay .welcomeGetShareLink {
         cursor: pointer;
