--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -6,10 +6,15 @@
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
   <script src='lib/webcomponentsjs/webcomponents.js'></script>
 
-  <script src='../scripts/uproxy.js'></script>
-  <script src='../scripts/user.js'></script>
-  <script src='../scripts/ui.js'></script>
-  <script src='scripts/dependencies.js'></script>
+  <script src='scripts/uproxy.js'></script>
+  <script src='scripts/chrome_glue.js'></script>
+  <script src='scripts/chrome_browser_api.js'></script>
+  <script src='scripts/core_connector.js'></script>
+  <script src='scripts/chrome_tab_auth.js'></script>
+  <script src='scripts/chrome_connector.js'></script>
+  <script src='scripts/user.js'></script>
+  <script src='scripts/ui.js'></script>
+  <script src='scripts/background.js'></script>
 
   <link rel='import' href='polymer/vulcanized.html'>
   <style>
