--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -10,6 +10,9 @@
       padding-bottom: 8px;
       border-top: 1px solid rgb(221, 221, 221);
     }
+    #wrapper.offline {
+      opacity: 0.5;
+    }
     paper-button {
       background: rgb(221, 221, 221);
       color: rgb(112, 112, 112);
@@ -47,77 +50,81 @@
     }
     </style>
 
-    <div id='description' hidden?='{{ !instance.description }}'>
-      {{ instance.description }}
-    </div>
+    <div id='wrapper' class='{{ instance.isOnline ? "online" : "offline" }}'>
 
-    <!-- TODO(jetpack): replace these state-dependent buttons with
-    simpler UI, exposing state bits directly. -->
-    <div id='getControls' hidden?='{{ui.mode!=UI.Mode.GET}}'>
-
-      <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <p class='highlighted'>
-          <img src='../icons/checkmark.png'> {{user.name || user.userId }} has granted you access
-        </p>
-        <paper-button class='highlightedButton' raised
-            hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
-          Start getting access
-        </paper-button>
-        <paper-button raised hidden?='{{ !instance.access.asProxy }}' on-tap='{{ stop }}'>
-          Stop getting access
-        </paper-button>
+      <div id='description' hidden?='{{ !instance.description }}'>
+        {{ instance.description }}
       </div>
 
-      <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <p class='preButtonText askingText'><img src='../icons/clock.png'> Asking for access</p>
-        <p class='preButtonText'>You will be able to get access when they accept.</p>
-        <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
+      <!-- TODO(jetpack): replace these state-dependent buttons with
+      simpler UI, exposing state bits directly. -->
+      <div id='getControls' hidden?='{{ui.mode!=UI.Mode.GET}}'>
+
+        <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal ) }}'>
+          <p class='highlighted'>
+            <img src='../icons/checkmark.png'> {{user.name || user.userId }} has granted you access
+          </p>
+          <paper-button class='highlightedButton' raised
+              hidden?='{{ instance.access.asProxy }}' on-tap='{{ start }}'>
+            Start getting access
+          </paper-button>
+          <paper-button raised hidden?='{{ !instance.access.asProxy }}' on-tap='{{ stop }}'>
+            Stop getting access
+          </paper-button>
+        </div>
+
+        <div hidden?='{{ !( getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
+          <p class='preButtonText askingText'><img src='../icons/clock.png'> Asking for access</p>
+          <p class='preButtonText'>You will be able to get access when they accept.</p>
+          <paper-button raised on-tap='{{ cancelRequest }}'>Cancel Request</paper-button>
+        </div>
+
+        <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && !getConsentState().ignoringRemoteUserOffer ) }}'>
+          <p class='preButtonText'>They've offered you access.</p>
+          <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
+          <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
+        </div>
+
+        <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && getConsentState().ignoringRemoteUserOffer ) }}'>
+          <p class='preButtonText'>They've offered you access.</p>
+          <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
+        </div>
+
+        <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
+          <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
+            Ask for access
+          </paper-button>
+        </div>
+
       </div>
 
-      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && !getConsentState().ignoringRemoteUserOffer ) }}'>
-        <p class='preButtonText'>They've offered you access.</p>
-        <paper-button class='highlightedButton' raised on-tap='{{ request }}'>Accept Offer</paper-button>
-        <paper-button class='highlightedButton' raised on-tap='{{ ignoreOffer }}'>Decline</paper-button>
-      </div>
+      <div id='shareControls' hidden?='{{ui.mode!=UI.Mode.SHARE}}'>
 
-      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && getConsentState().remoteGrantsAccessToLocal && getConsentState().ignoringRemoteUserOffer ) }}'>
-        <p class='preButtonText'>They've offered you access.</p>
-        <paper-button raised on-tap='{{ unignoreOffer }}'>Stop ignoring offers</paper-button>
-      </div>
+        <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal ) }}'>
+          <p class='preButtonText'>You've given them access.</p>
+          <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
+        </div>
 
-      <div hidden?='{{ !( !getConsentState().localRequestsAccessFromRemote && !getConsentState().remoteGrantsAccessToLocal ) }}'>
-        <paper-button raised class='highlightedButton' on-tap='{{ request }}'>
-          Ask for access
-        </paper-button>
-      </div>
+        <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
+          <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
+        </div>
 
-    </div>
+        <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && !getConsentState().ignoringRemoteUserRequest ) }}'>
+          <p class='preButtonText'>They requested access through you.</p>
+          <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
+          <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
+        </div>
 
-    <div id='shareControls' hidden?='{{ui.mode!=UI.Mode.SHARE}}'>
+        <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && getConsentState().ignoringRemoteUserRequest ) }}'>
+          <p class='preButtonText'>They requested access through you.</p>
+          <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
+        </div>
 
-      <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal ) }}'>
-        <p class='preButtonText'>You've given them access.</p>
-        <paper-button raised on-tap='{{ cancelOffer }}'>Revoke Access</paper-button>
-      </div>
+        <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
+          <p class='preButtonText'>You have not granted them access.</p>
+          <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
+        </div>
 
-      <div hidden?='{{ !( getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
-        <paper-button raised on-tap='{{ cancelOffer }}'>Cancel Offer</paper-button>
-      </div>
-
-      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && !getConsentState().ignoringRemoteUserRequest ) }}'>
-        <p class='preButtonText'>They requested access through you.</p>
-        <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Grant</paper-button>
-        <paper-button raised class='highlightedButton' on-tap='{{ ignoreRequest }}'>Ignore</paper-button>
-      </div>
-
-      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && getConsentState().remoteRequestsAccessFromLocal && getConsentState().ignoringRemoteUserRequest ) }}'>
-        <p class='preButtonText'>They requested access through you.</p>
-        <paper-button raised on-tap='{{ unignoreRequest }}'>Stop ignoring requests</paper-button>
-      </div>
-
-      <div hidden?='{{ !( !getConsentState().localGrantsAccessToRemote && !getConsentState().remoteRequestsAccessFromLocal ) }}'>
-        <p class='preButtonText'>You have not granted them access.</p>
-        <paper-button raised class='highlightedButton' on-tap='{{ offer }}'>Offer Access</paper-button>
       </div>
 
     </div>
