--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -8,6 +8,7 @@
 
   <script src='scripts/ui_enums.js'></script>
   <script src='scripts/dependencies.js'></script>
+  <script src='scripts/uproxy.js'></script>
 
   <link rel='import' href='polymer/vulcanized.html'>
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
