--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -26,39 +26,54 @@
     ::-webkit-input-placeholder {
       color: #ccc;
     }
+    #noContactsFound {
+      text-align: center;
+      margin: 75px;
+    }
+    #noContactsFound div {
+      margin-top: 2em;
+      font-size: 17px;
+    }
     </style>
 
-    <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}'></input>
+    <div id='noContactsFound' hidden?='{{ onlineTrustedUproxyContacts.length > 0 || offlineTrustedUproxyContacts.length > 0 || onlinePending.length > 0 || offlinePending.length > 0 || onlineUntrustedUproxyContacts.length > 0 || offlineUntrustedUproxyContacts.length > 0 }}'>
+      <img src='../icons/contact-default.png'>
+      <div>None of your friends on {{ model.onlineNetwork.name }} are signed into uProxy at this time</div>
+    </div>
 
-    <!-- uProxy contacts offering access to or requesting access from user -->
-    <uproxy-roster-group
-        groupTitle='{{ui.mode==UI.Mode.GET ? "Users offering you access" : "Users requesting access from you"}}'
-        onlineContacts='{{ onlinePending }}'
-        offlineContacts='{{ offlinePending }}'
-        searchQuery='{{ searchQuery }}'
-        pending="{{ true }}"></uproxy-roster-group>
+    <div hidden?='{{ !(onlineTrustedUproxyContacts.length > 0 || offlineTrustedUproxyContacts.length > 0 || onlinePending.length > 0 || offlinePending.length > 0 || onlineUntrustedUproxyContacts.length > 0 || offlineUntrustedUproxyContacts.length > 0) }}'>
+      <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}'></input>
 
-    <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
-    <hr color="#eee"
-        hidden?='{{ ((onlinePending.length == 0 && offlinePending.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
+      <!-- uProxy contacts offering access to or requesting access from user -->
+      <uproxy-roster-group
+          groupTitle='{{ui.mode==UI.Mode.GET ? "Users offering you access" : "Users requesting access from you"}}'
+          onlineContacts='{{ onlinePending }}'
+          offlineContacts='{{ offlinePending }}'
+          searchQuery='{{ searchQuery }}'
+          pending="{{ true }}"></uproxy-roster-group>
 
-    <!-- trusted uProxy contacts -->
-    <uproxy-roster-group
-        groupTitle='Trusted uProxy Friends'
-        onlineContacts='{{ onlineTrustedUproxyContacts }}'
-        offlineContacts='{{ offlineTrustedUproxyContacts }}'
-        searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+      <!-- Hide HR above Trusted if there are no Trusted contacts, or if there are no Pending contacts -->
+      <hr color="#eee"
+          hidden?='{{ ((onlinePending.length == 0 && offlinePending.length == 0)) || (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) }}'></hr>
 
-    <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
-    <hr color="#eee"
-        hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlinePending.length == 0 && offlinePending.length == 0)) }}'></hr>
+      <!-- trusted uProxy contacts -->
+      <uproxy-roster-group
+          groupTitle='Trusted uProxy Friends'
+          onlineContacts='{{ onlineTrustedUproxyContacts }}'
+          offlineContacts='{{ offlineTrustedUproxyContacts }}'
+          searchQuery='{{ searchQuery }}'></uproxy-roster-group>
 
-    <!-- untrusted uProxy contacts -->
-    <uproxy-roster-group
-        groupTitle='All uProxy Contacts'
-        onlineContacts='{{ onlineUntrustedUproxyContacts }}'
-        offlineContacts='{{ offlineUntrustedUproxyContacts }}'
-        searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+      <!-- Hide HR above Untrusted if there are no Untrusted contacts, or if there are no Trusted & Pending contacts -->
+      <hr color="#eee"
+          hidden?='{{ (onlineTrustedUproxyContacts.length == 0 && offlineTrustedUproxyContacts.length == 0) || ((onlineUntrustedUproxyContacts.length == 0 && offlineUntrustedUproxyContacts.length == 0) && (onlinePending.length == 0 && offlinePending.length == 0)) }}'></hr>
+
+      <!-- untrusted uProxy contacts -->
+      <uproxy-roster-group
+          groupTitle='All uProxy Contacts'
+          onlineContacts='{{ onlineUntrustedUproxyContacts }}'
+          offlineContacts='{{ offlineUntrustedUproxyContacts }}'
+          searchQuery='{{ searchQuery }}'></uproxy-roster-group>
+    </div>
 
   </template>
 
