--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -74,7 +74,7 @@
         position: relative;
         background-color: white;
         height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
         display: block;
       }
       .getShareTab {
