Edit grunt tasks to measure code coverage.
- also move Chrome specific Polymer into its own folder

--- a/src/chrome/extension/polymer/app-missing-polymer.html
+++ b/src/chrome/extension/polymer/app-missing-polymer.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../generic_ui/lib/polymer/polymer.html">
-<link rel="import" href="../../generic_ui/lib/paper-button/paper-button.html">
+<link rel="import" href="../../../generic_ui/lib/polymer/polymer.html">
+<link rel="import" href="../../../generic_ui/lib/paper-button/paper-button.html">
 
 <polymer-element name='uproxy-app-missing'>
   <template>
@@ -26,5 +26,5 @@
     <paper-button class='highlightedButton' raised on-tap='{{ downloadApp }}'>NEXT</paper-button>
 
   </template>
-  <script src='scripts/app-missing-polymer.js'></script>
+  <script src='app-missing-polymer.js'></script>
 </polymer-element>
