--- a/src/chrome/extension/polymer/app-missing.html
+++ b/src/chrome/extension/polymer/app-missing.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes'>
-  <script src='lib/webcomponentsjs/webcomponents.js'></script>
+  <script src='../lib/webcomponentsjs/webcomponents.js'></script>
 
-  <script src='scripts/dependencies.js'></script>
+  <script src='../scripts/dependencies.js'></script>
 
   <link rel='import' href='vulcanized-chrome.html'>
   <style>
