Rename chrome_connector + add chrome_ui_connector

--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -4,6 +4,7 @@
     <script type='text/javascript' src='scripts/uproxy.js'></script>
     <script type='text/javascript' src='scripts/chrome_oauth.js'></script>
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
+    <script type='text/javascript' src='scripts/chrome_ui_connector.js'></script>
     <script src='lib/freedom-for-chrome.js'></script>
     <script type='text/javascript' src='scripts/plumbing.js'></script>
   </head>
