--- a/src/chrome/app/background.html
+++ b/src/chrome/app/background.html
@@ -6,7 +6,7 @@
     <script type='text/javascript' src='scripts/chrome_glue.js'></script>
     <script type='text/javascript' src='scripts/chrome_ui_connector.js'></script>
     <script src='lib/freedom-for-chrome.js'></script>
-    <script type='text/javascript' src='scripts/plumbing.js'></script>
+    <script type='text/javascript' src='scripts/background.js'></script>
   </head>
   <body>
     The uProxy App lives here.
