Move non-Polymer element files out of polymer/

--- a/src/generic_ui/disconnected.html
+++ b/src/generic_ui/disconnected.html
@@ -7,9 +7,10 @@
       background-color: #E6E6E6
     }
   </style>
-  <script src='../scripts/dependencies.js'></script>
+  <script src='scripts/dependencies.js'></script>
+  <script src='scripts/uproxy.js'></script>
 
-  <link rel='import' href='confirm.html'>
+  <link rel='import' href='polymer/vulcanized.html'>
 </head>
 
 <body>
