--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -3,6 +3,7 @@
 <link rel="import" href='roster.html'>
 <link rel="import" href='settings.html'>
 <link rel="import" href='overlay.html'>
+<link rel="import" href='confirm.html'>
 
 <polymer-element name='uproxy-root' attributes='model'>
 
