--- a/samples/simple-freedom-chat/main.html
+++ b/samples/simple-freedom-chat/main.html
@@ -21,6 +21,6 @@
     <button id="sendButtonB">Send</button>
   </div>
 
-  <script src='main.js'></script>
+  <script src='main.static.js'></script>
 </body>
 </html>
