Removed some height/width restrictions
This takes the app closer to being responsive and should remove the
scrollbars when opened in a smaller-than-expected window.

--- a/src/generic_ui/index.html
+++ b/src/generic_ui/index.html
@@ -19,14 +19,12 @@
       src: url('styles/eurostile.ttf');
     }
     body {
-      position: relative;
-      width: 371px; height: 600px;
       display: block;
       text-align: center;
       margin: 0;
       font-family: Roboto, sans-serif;
       font-size: 13px;
-      background-color: #eee;
+      background-color: white;
     }
   </style>
 </head>
