--- a/samples/copypaste-freedom-chat/main.html
+++ b/samples/copypaste-freedom-chat/main.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="main.css">
 
-    <script src='freedom.js'></script>
+    <script src='lib/freedom.js'></script>
   </head>
 
   <body>
