Switch settings div visibility to hidden when off screen
There was previously an issue where the right portion of the settings
div would appear over the window if the window was shrunk to a small
enough width.  This changes the visibility of the window to hidden so
it should no longer show up.

--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -25,10 +25,12 @@
       background-color: #ffffff;
       z-index: 2001;
       font-size: 14px;
+      visibility: hidden;
     }
     :host(.active) {
       left: 0;
       overflow: hidden;
+      visibility: visible;
     }
     .userInfo {
       background-color: #009688;  /* dark green */
