Contact entries will now show up on one line regardless of length
Contacts with long names will now show up on one line as well.

There is a bug left (will be filed) where the truncation behaviour of
the contact names is a bit odd (the screen-width portion of the name is
all that is visible, however, the actual name div extends past the
visible region and therefore we cannot use normal methods to handle that
such as adding an ellipsis at the end).

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -17,6 +17,7 @@
       -webkit-user-select: none;
       -moz-user-select: none;
       user-select: none;
+      white-space: nowrap;
     }
     div:focus {
       outline: 0; /* disable blue focus outline around contact */
@@ -37,7 +38,6 @@
     }
     #words {
       display: inline-block;
-      width: 278px;
       padding-left: 8px;
     }
     .nameRow {
@@ -48,7 +48,6 @@
     }
     .name {
       display: inline-block;
-      width: 255px;
     }
     .accessIcon {
       vertical-align: middle;
