Fix issue with offline contacts not appearing shaded
Fixed a small mistake with assigning classes to the .frame element (I
switched frame from an id to a class which caused the appearance of two
class attributes which caused the second one to be ignored)

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -54,8 +54,8 @@
     }
     </style>
 
-    <div tabindex='-1' class='frame'
-        class='{{ contact.expanded ? "expanded" : "" }} {{ isOnline ? "online" : "offline" }}'>
+    <div tabindex='-1' class='frame
+        {{ contact.expanded ? "expanded" : "" }} {{ isOnline ? "online" : "offline" }}'>
       <div on-tap='{{ toggle}}' class='nameRow'>
         <img class='avatar' src='{{ contact.imageData }}' />
         <span class='name'>{{ contact.name }}</span>
