Update giving and getting icons (beside contact)

--- a/src/generic_ui/polymer/confirm.html
+++ b/src/generic_ui/polymer/confirm.html
@@ -25,7 +25,7 @@
     </style>
 
     <div id='errorBox'>
-      <img src="../icons/uproxy-19.png"><img><br><br>
+      <img src="../icons/LoggedIn_38.gif"><img><br><br>
       Your uProxy connection was disrupted and you are no longer accessing the internet through your friend. You can try to browse the internet with your local connection, but proceed with caution if you are worried about your connection's security. Before clicking Confirm, close any tabs you do not want to access with your local connection.
       <br><br>
 
