--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -59,9 +59,9 @@
       <div on-tap='{{ toggle}}' class='nameRow'>
         <img class='avatar' src='{{ contact.imageData }}' />
         <span class='name'>{{ contact.name }}</span>
-        <img src='../icons/getting.png' class='accessIcon'
+        <img src='../icons/GettingAccess_UI_40.gif' class='accessIcon'
             hidden?='{{ ui.mode!=UI.Mode.GET || !contact.isSharingWithMe }}'>
-        <img src='../icons/sharing.png' class='accessIcon'
+        <img src='../icons/SharingAccess_UI_40.gif' class='accessIcon'
             hidden?='{{ ui.mode!=UI.Mode.SHARE || !contact.isGettingFromMe }}'>
       </div>
 
