--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -225,10 +225,10 @@
 
       <div id='status'>
         <div class='statusRow' hidden?='{{!ui.gettingStatus}}'>
-          <div class='statusText'><img src='../icons/getting.png'>{{ui.gettingStatus}}</div>
+          <div class='statusText'><img src='../icons/GettingAccess_UI_40.gif'>{{ui.gettingStatus}}</div>
         </div>
         <div class='statusRow' hidden?='{{!ui.sharingStatus}}'>
-          <div class='statusText'><img src='../icons/sharing.png'>{{ui.sharingStatus}}</div>
+          <div class='statusText'><img src='../icons/SharingAccess_UI_40.gif'>{{ui.sharingStatus}}</div>
         </div>
       </div>
 
