Delete unused icons; update styling + gruntfile

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -43,6 +43,8 @@
       right: 0;
       margin-top: 1em; /* line up with text (hacky) */
       padding-right: 15px;
+      width: 20px;
+      height: 20px;
     }
     .instances {
       padding-top: 8px;
