--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -103,6 +103,8 @@
       .statusText img {
         vertical-align: middle;
         padding-right: 1em;
+        width: 20px;
+        height: 20px;
       }
       .clickable {
         cursor: pointer;
