--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -227,10 +227,10 @@
 
       <div id='status'>
         <div class='statusRow' hidden?='{{!ui.gettingStatus}}'>
-          <div class='statusText'><img src='../icons/GettingAccess_UI_40.gif'>{{ui.gettingStatus}}</div>
+          <div class='statusText'><img src="{{ '../icons/' + UI.BUDDY_GETTING_ICON }}">{{ui.gettingStatus}}</div>
         </div>
         <div class='statusRow' hidden?='{{!ui.sharingStatus}}'>
-          <div class='statusText'><img src='../icons/SharingAccess_UI_40.gif'>{{ui.sharingStatus}}</div>
+          <div class='statusText'><img src="{{ '../icons/' + UI.BUDDY_SHARING_ICON }}">{{ui.sharingStatus}}</div>
         </div>
       </div>
 
