Make the header and footer on the contact list fixed
Closes #913

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -18,9 +18,16 @@
         background-color: white;
         color: rgb(112, 112, 112);
       }
+      #logged-in-controls {
+        margin-top: 100px;
+      }
       #toolbar {
         height: 100px;
         background-color: #009688;
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        width: 100%;
       }
       #btnSettings {
         position: absolute;
@@ -83,7 +90,7 @@
         left: 50%;
       }
       #status {
-        position: absolute;
+        position: fixed;
         width: 100%;
         bottom: 0px;
       }
