--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -6,12 +6,12 @@
     :host {
       text-align: center;
     }
-    #toolbar {
+    #cptoolbar {
       height: 50px;
       background: grey;
       color: white;
     }
-    #toolbar * {
+    #cptoolbar * {
       line-height: 50px;
     }
     .prevArrow {
@@ -33,7 +33,7 @@
       color: white;
     }
     </style>
-    <div id='toolbar'>
+    <div id='cptoolbar'>
       <div class='prevArrow'>
         <img src='../icons/arrow-left.png' on-tap='{{prev}}' />
       </div>
